force-app/main/default/objects/Campaign_History__c/Campaign_History__c.object-meta.xml
<CustomObject>
    <label>inwise Campaign History</label>
    <nameField>
        <displayFormat>CHN-{0000}</displayFormat>
        <label>Campaign History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Campaign History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>