force-app/main/default/objects/Campaign_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SendMember</fullName>
            </value>
            <value>
                <fullName>InwiseStatistics</fullName>
            </value>
            <value>
                <fullName>InwiseMembersActions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>