force-app/main/default/objects/Campaign_History__c/fields/Campaign_Sync__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Sync__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Sync</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>inwise Campaign History</relationshipLabel>
    <relationshipName>inwise_Campaign_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>